# I_HAVE_A_DREAM-demo-version-1.0

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  pornhub  日志规范化提示词
.github/: pull_request_template.md
.github/workflows/: ci.yml
build-asan/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  I_HAVE_A_DREAM  Makefile  cmake_install.cmake
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  I_HAVE_A_DREAM  build.ninja  cmake_install.cmake  compile_commands.json
build-tests/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  I_HAVE_A_DREAM  Makefile  cmake_install.cmake  cmake_test_discovery_3454626874.json  game_tests  game_tests[1]_include.cmake  game_tests[1]_tests.cmake
build-tests/Testing/Temporary/: CTestCostData.txt
docker/: run-game.sh
scripts/: check_test_coverage.py
src/: character.cpp  character.h  combat_system.cpp  combat_system.h  enemy.cpp  enemy.h  item.cpp  item.h  main  main.cpp  melee_enemy.cpp  melee_enemy.h  platform_system.cpp  platform_system.h  player.cpp  player.h  player_controller.cpp  player_controller.h  player_shadow.cpp  player_shadow.h  player_sprite_renderer.cpp  player_sprite_renderer.h  projectile_system.cpp  projectile_system.h  ranged_enemy.cpp  ranged_enemy.h  scene.cpp  scene.h  shadow_manager.cpp  shadow_manager.h  shadow_system.cpp  shadow_system.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tests/: character_test.cpp  combat_system_test.cpp  enemy_test.cpp  item_test.cpp  melee_enemy_test.cpp  platform_system_test.cpp  player_controller_test.cpp  player_shadow_test.cpp  player_sprite_renderer_test.cpp  player_test.cpp  projectile_system_test.cpp  ranged_enemy_test.cpp  scene_test.cpp  shadow_manager_test.cpp  shadow_system_test.cpp
